# drp_course_2023

./: .gitignore  README.MD  README.md  REDME.md  WSL_estimator.py  groundmap.py  params.py  run_docker.sh  tractor_simulator_drp.py  tractor_simulator_multiple.py  trajectory.py  wls_estimator.py
data/: robot_data.csv  robot_data_01.csv
docker/: Dockerfile  build.sh  ros_entrypoint.sh
notebooks/: WSL_estimator.ipynb  csv_analysis.ipynb  data_analisys.ipynb  estimator.ipynb  groundmap.ipynb  regressor.ipynb  results_plot.ipynb  sensor_calibration.ipynb  slipage.ipynb  trajectory_generator.ipynb  wls_distributed.ipynb  wls_estimator.ipynb  wls_test.ipynb
notebooks/data/: 09041.csv  1.csv  13349.csv  1568.csv  ident_wheels_sim_0.09041.csv  ident_wheels_sim_0.1.csv  ident_wheels_sim_0.13349.csv  ident_wheels_sim_0.1568.csv
src/limo_description/urdf/: limo_four_diff.xacro  limo_gazebo.gazebo
src/limo_pkgs/limo_description/: CMakeLists.txt
src/limo_pkgs/limo_description/launch/: display_models_diff.launch.py  gazebo_models_diff_mod.launch.py  rsp.launch.py
src/limo_pkgs/limo_description/rviz/: limo.rviz  limo_rviz.rviz
src/limo_pkgs/limo_description/urdf/: limo.xacro  limo_four_diff.urdf  limo_four_diff.xacro  limo_four_diff_2.gazebo  limo_gazebo.gazebo
src/limo_pkgs/limo_gazebo/: CMakeLists.txt  package.xml
src/limo_pkgs/limo_gazebo/launch/: robot.launch.py
src/limo_pkgs/limo_navigation/: CMakeLists.txt  package.xml
src/project/: CMakeLists.txt  package.xml
src/project/launch/: run_sim.launch.py
src/project/rviz/: limo.rviz
(+3 files in other folders)
