<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project</name>
  <version>1.0.0</version>
  <description>
  hello
  </description>
  <maintainer email="rb@unitn.it">rb</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>limo_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>